--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.2.1",
     "cloudinary": "^1.34.0",
+    "dotenv": "^17.3.1",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.9.1",
     "next": "13.1.6",
